# Terminal-Brain

./: .gitignore  ADVANCED_FEATURES_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DELIVERABLES.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MODULE_REFERENCE.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  pyproject.toml  test_predict.py
.github/workflows/: debian-package.yml
config/: terminalbrain.toml
docs/: ADVANCED_FEATURES.md  API.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  EXAMPLES.md  LIGHTWEIGHT_INSTALL.md  PLUGIN_SYSTEM.md  SHELL_SETUP.md
docs/packaging/: APT_DISTRIBUTION.md
packaging/debian/: README.md
scripts/: build_deb.sh  generate_apt_repo.sh  install.sh  install_local_deb.sh  setup_hooks.sh  setup_local_apt_repo.sh
terminalbrain/: __init__.py  cli.py  config.py
terminalbrain/advanced/: __init__.py  alias_suggester.py  command_explainer.py  command_predictor.py  error_analyzer.py  learning_feedback.py  safety_checker.py  script_generator.py  workflow_detector.py  workflow_recommender.py
terminalbrain/ai/: __init__.py  error_debugger.py  llm_engine.py  ml_predictor.py  recommendation_engine.py
terminalbrain/core/: __init__.py  command_parser.py  context_analyzer.py  history_analyzer.py  ranking_engine.py
terminalbrain/knowledge/: __init__.py  knowledge_base.py
terminalbrain/monitor/: __init__.py  network_monitor.py  process_monitor.py  system_monitor.py
terminalbrain/plugins/: __init__.py  knowledgebase.py  llm.py  prediction.py  voice.py  workflows.py
tests/: example_usage.py  test_advanced.py  test_advanced_examples.py  test_core.py  test_integration.py
(+10 files in other folders)
